# traffic-violation-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
deploy/: tvds-power-watch.service  tvds.service
docker/: Dockerfile.jetson
docs/: 01-project-plan.md  02-architecture.md  03-hardware-bom.md  04-software-stack.md  05-detection-design.md  06-legal-and-privacy.md  07-changes-from-original-spec.md  08-hardware-build-guide.md
scripts/: power_watch.py  setup_jetson.sh
src/tvd/: __init__.py  alpr.py  capture.py  config.py  detector.py  geometry.py  light_classifier.py  main.py  pipeline.py  recorder.py  review.py  storage.py
src/tvd/sensors/: __init__.py  gps.py  imu.py  obd.py  state.py
src/tvd/violations/: __init__.py  base.py  collision.py  engine.py  hard_brake.py  lane_departure.py  red_light.py  stop_sign.py  tailgating.py
tests/: test_geometry.py  test_light_classifier.py  test_power_watch.py  test_recorder_storage.py  test_rule_engine.py  test_tier2.py
